working on multiple html files

--- a/src/views/about-us.html
+++ b/src/views/about-us.html
@@ -6,10 +6,10 @@
 		<title>Webpack Mastery!</title>
 	</head>
 	<body>
-		<h1>Webpack Mastery!</h1>
+		<header></header>
 
-		<img src="./assets/logo-on-white-bg.png" alt="Logo" />
+		<h1>About Us!</h1>
 
-		<script src="./dist/index.bundle.js"></script>
+		<img src=" ./assets/logo-on-white-bg.png" alt="Logo" />
 	</body>
 </html>
