--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,12 +6,9 @@
 		<title>Webpack Mastery!</title>
 	</head>
 	<body>
-		<!-- sample comment -->
-		<h1>About Us!</h1>
-		<ul>
-			<li><a href="./index.html">Home</a></li>
-			<li><a href="./products.html">Projects</a></li>
-		</ul>
+		<header></header>
+
+		<h1>Home Page!</h1>
 
 		<img src=" ./assets/logo-on-white-bg.png" alt="Logo" />
 	</body>
