--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,13 +6,12 @@
 		<title>Webpack Mastery!</title>
 	</head>
 	<body>
-		<!-- sample comment -->
-		<h1>Projects!</h1>
-		<ul>
-			<li><a href="./index.html">Home</a></li>
-			<li><a href="./about.html">About Us</a></li>
-		</ul>
+		<header></header>
 
-		<img src=" ./assets/logo-on-white-bg.png" alt="Logo" />
+		<h1>Home Page!</h1>
+
+		<img src=" ../assets/logo-on-white-bg.png" alt="Logo" />
+
+		<footer></footer>
 	</body>
 </html>
