--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,21 +1,3 @@
-$body-color: red;
-
 body {
-	font-size: responsive;
-	text-align: center;
-	display: grid;
-	transition: all 0.5s;
-	user-select: none;
-	background-color: $body-color;
-
-	img {
-		max-width: 100%;
-	}
-
-	ul {
-		display: flex;
-		li {
-			margin-right: 30px;
-		}
-	}
+	background-color: red;
 }
